ci: Temporarily disable apply_fixes Windows tests
It turns out the applying_fixes tool has some problems on Windows which we
overlooked until now due to the test cases only working with root level
targets and not targets from sub dir packages.
Fixing this will be a dedicated effort.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,4 +104,5 @@ jobs:
           # Keep in sync with README.md
           version: '8.2.1'
       - name: Integration tests - Applying fixes
+        if: runner.os != 'Windows'
         run: python test/apply_fixes/execute_tests.py
