--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,4 +104,4 @@ jobs:
           # Keep in sync with README.md
           version: '8.2.1'
       - name: Integration tests - Applying fixes
-        run: python test/apply_fixes/execute_tests.py -t unused_dependency/remove_unused_public_dep -v
+        run: python test/apply_fixes/execute_tests.py
